增加在浏览器上的mocha测试

--- a/test/browser/index.html
+++ b/test/browser/index.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Mocha</title>
+
+<head>
+    <title>Promise Mocha Test</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="mocha.css" />
-  </head>
-  <body>
+</head>
+
+<body>
     <div id="mocha"></div>
     <script src="mocha.js"></script>
-    <script src="../../node_modules/chai/chai.js"></script>
-    <script>mocha.setup('bdd');</script>
-    <script src="../../node_modules/babel-polyfill/dist/polyfill.min.js"></script>
-    <script src="test.js"></script>
-    <script>
-      mocha.run();
-    </script>
-  </body>
+    <script src="promise.tests.js"></script>
+</body>
+
 </html>
